# mkdocs-plugin-open-external-links-in-new-tab

./: LICENSE  README.md  pyproject.toml
mkdocs_plugin_open_external_links_in_new_tab/: plugin.py
